2009-10-23  Thomas Cougnard  <thomas.cougnard@gmail.com>

	* readelf.c (dynamic_info): Correct size of array.

2009-10-19  Jerker Bäck  <jerker.back@gmail.com>

	PR binutils/10793
	* prdbg.c (tg_end_struct_type): Warning fix.

	PR binutils/10792
	* dlltool.c (dll_name_list_append): Declare variable at start
	of block.
	(dll_name_list_count, dll_name-list_print): Likewise.

2009-10-01  Alan Modra  <amodra@bigpond.net.au>

	* addr2line.c (slurp_symtab): Don't use bfd_read_minisymbols.

2009-09-29  Nick Clifton  <nickc@redhat.com>

	* doc/binutils.texi (c++filt): Remove spurious description of
	nonexistent --java command line switch for cxxfilt.

2009-09-22  Richard Sandiford  <rdsandiford@googlemail.com>

	* objdump.c (disassemble_section): Use bfd_get_arch_size
	instead of assuming that the address size is 32 bits.

2009-09-21  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (get_ppc_dynamic_type): Add TLSOPT.
	(get_ppc64_dynamic_type): Likewise.

2009-09-18  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.
	* po/vi.po: Updated Vietnamese translation.

2009-09-11  Nick Clifton  <nickc@redhat.com>

	* po/binutils.pot: Updated by the Translation project.

2009-09-10  Martin Thuresson  <martin@mtme.org>

	Update sources to compile cleanly with -Wc++-compat:
	* addr2line.c (slurp_symtab): Fix casts. Introduce variable
	minisyms to avoid aliasing varning.
	* ar.c: Add casts.
	(normalize): Use name del instead of delete.
	(display_target_list,display_info_table): Change loop counter
	variable a to int.
	* bucomm.c: Add casts.
	* debug.c: Update function to use new names.
	(struct debug_baseclass): Rename member from virtual to
	is_virtual.
	(struct debug_type_s, struct debug_field_s, struct
	debug_baseclass_s, struct debug_method_s, struct
	debug_method_variant_s, struct debug_type_s): Rename struct from
	avoid name collision.
	* debug.h: Use new struct names.
	* dwarf.c: Add casts.
	(free_debug_memory): Change loop counter variable a to int.